--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,48 @@
 *{
     box-sizing: border-box;
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+header{
+    background-color: #687354;
+    width: 100%;
+    min-height: fit-content;
+    padding: 1.5em;
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo{
+    min-width: 50px;
+    max-width: 70px;
+    margin: 0.5em;
+}
+
+nav ul{
+    list-style: none;
+}
+
+nav li{
+    display: inline-block;
+}
+
+nav li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 500;
+    color: #FAF5E6;
+    padding: 0.3em 1em;
+}
+
+nav li a:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.active{
+    text-decoration: underline;
 }
