--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 *{
     box-sizing: border-box;
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Atkinson Hyperlegible', Verdana, Helvetica, Arial, sans-serif;
 }
+
+
+/*Header*/
 
 header{
     background-color: #687354;
@@ -45,4 +48,37 @@ nav li a:hover{
 
 .active{
     text-decoration: underline;
+}
+
+
+/*Hovedindhold*/
+
+main{
+    background-color: #687354;
+    background-image: linear-gradient(to bottom, #687354, #f9feed);
+}
+
+h1{
+    color: #FAF5E6;
+    -webkit-text-stroke: 1px #687354;
+    font-size: 96px;
+    padding: 0.3em;
+}
+
+
+/*Desktop*/
+
+@media screen and (min-width: 769px){
+    #bars{
+        display: none;
+    }
+}
+
+
+/*Mobil og tablet*/
+
+@media screen and (max-width: 768px){
+    .main-nav{
+        display: none;
+    }
 }
