--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ main{
     background-color: #f9feed;
     background-image: linear-gradient(to bottom, #687354, #f9feed);
     width: 100%;
+    padding-top: 7vh;
 }
 
 h1{
@@ -72,11 +73,87 @@ h1{
     padding: 0.3em;
 }
 
+h2{
+    color: #FAF5E6;
+    font-size: 24px;
+}
+
 .banner{
-    margin: 0 auto;
+    margin: 0 auto 7vh auto;
     aspect-ratio: 16/9;
-    width: 80%;
+    width: 90%;
     background-color: burlywood; /*placeholder for billede*/
+}
+
+.categories p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #f9feed;
+}
+
+.categories a{
+    text-decoration: none;
+    color: #2d1203;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.categories a:hover{
+    text-decoration: underline;
+    color: #210f05;
+}
+
+.left-sec, .right-sec{
+    display: flex;
+    margin-bottom: 20px;
+    width: 95%;
+}
+
+.right-sec{
+    justify-self: flex-end;
+}
+
+.left-div, .right-div{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    gap: 15px;
+    padding: 10px;
+    background-color: #687354;
+    border: 2px solid #515b3f;
+    height: 32vh;
+    width: 100%
+}
+
+.right-div{
+    border-radius: 30px 0 0 30px;
+    border-right: none;
+}
+
+.left-div{
+    border-radius: 0 30px 30px 0;
+    border-left: none;
+    justify-content: space-between;
+}
+
+.left-content, .right-content{
+    display: flex;
+    flex-direction: column;
+}
+
+.left-content{
+    gap: 5px;
+}
+
+.left-img, .right-img{
+    width: 35vw;
+    object-fit: contain;
+    align-self: center;
+    border-radius: 30px;
+}
+
+.left-img{
+    justify-self: flex-end;
 }
 
 .visually-hidden{
