--- a/css/style.css
+++ b/css/style.css
@@ -108,14 +108,14 @@ h3{
 
 .categories a{
     text-decoration: none;
-    color: #160902;
+    color: #accbde;
     font-size: 18px;
     font-weight: 600;
 }
 
 .categories a:hover{
     text-decoration: underline;
-    color: #210f05;
+    color: #0b283b;
 }
 
 .left-sec, .right-sec{
@@ -170,6 +170,29 @@ h3{
     justify-self: flex-end;
 }
 
+.nyhedsbrev{
+    background-color: #accbde;
+    border: 4px solid #515b3f;
+    border-radius: 15px;
+    padding: 1.3em 5%;
+    margin: 2em 5%;
+}
+
+.nyhedsbrev h2, .nyhedsbrev h3{
+    color: #515b3f;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+.nyhedsbrev p{
+    color: #2e2e2e;
+    padding-bottom: 1.3em;
+}
+
+.nyhedsbrev input[type=email]{
+    margin-bottom: 15px;
+}
+
 .textbox{
     margin: 2em 5%;
     padding: 1.3em 5%;
@@ -180,6 +203,10 @@ h3{
 
 .textbox h3, .textbox p{
     padding-bottom: 1em; 
+}
+
+.textbox p{
+    color: #2e2e2e;
 }
 
 .quote{
@@ -203,7 +230,103 @@ cite{
 
 /*Kontakt*/
 
+.tekst-kontakt{
+    background-color: #687354;
+    border-top: 2px solid #515b3f;
+    border-bottom: 2px solid #515b3f;
+    padding: 15px 5% 30px 5%;
+    margin: 1em 0;
+}
 
+.tekst-kontakt p{
+    color: #f9feed;
+    margin-top: 15px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.tekst-kontakt a{
+    color: #accbde;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+strong{
+    color: #300e16;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    background-color: #f9feed;
+    border: 4px solid #515b3f;
+    border-radius: 20px;
+    padding: 1.3em 10%;
+    margin: 1.7em 5%;
+}
+
+input[type=text], input[type=email], textarea{
+	width: 100%;
+	padding: 1em;
+	border: 1px solid #515b3f;
+	border-radius: 4px;
+}
+
+.text, .navn, .email, fieldset, .besked, .submit{
+    margin: 1em 0;
+}
+
+label, .text, legend, .options{
+    display: flex;
+}
+
+.asterisk{
+    color: red;
+}
+
+fieldset{
+    padding: 1em 0.2em;
+    border: dotted #515b3f;
+    justify-content: center;
+}
+
+legend{
+    text-align: center;
+}
+
+fieldset .options{
+    justify-content: center;
+}
+
+.options input{
+    margin-right: 5px;
+}
+
+.options label{
+    margin-right: 2.5em;
+}
+
+textarea{
+    min-height: 20vh;
+}
+
+input[type=submit]{
+    display: flex;
+    justify-self: center;
+    text-align: center;
+    font-size: 20px;
+    color: #f9feed;
+    background-color: #687354;
+    border: 2px solid #515b3f;
+    border-radius: 4px;
+    padding: 5px;
+}
+
+input[type=submit]:hover{
+    background-color: #515b3f;
+    cursor: pointer;
+}
 
 
 /*Footer*/
