--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,45 @@ input[type=submit]:hover{
 }
 
 
+/*Hotlines*/
+
+.akut{
+    background-color: #687354;
+    font-size: 20px;
+    border-top: 2px solid #515b3f;
+    border-bottom: 2px solid #515b3f;
+    padding: 1.3em 5%;
+}
+
+.hotline{
+    display: flex;
+    flex-direction: column;
+    background-color: #f9feed;
+    border: 4px solid #515b3f;
+    border-radius: 15px;
+    padding: 1.3em 5%;
+    margin: 1.3em 5%;
+}
+
+.hotline h3{
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.hotline p{
+    color: #2e2e2e;
+    margin-top: 10px;
+}
+
+.hotline a{
+    color: #515b3f;
+}
+
+.as-tel address:nth-of-type(1){
+    margin-bottom: 10px;
+}
+
+
 /*Footer*/
 
 footer{
