--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,35 @@ header{
 
 /*Hovedindhold Generelt*/
 
+.breadcrumb{
+    display: flex;
+    background-color: #687354;
+    width: 100%;
+    margin: 0;
+}
+
+.breadcrumb ol{
+    list-style-type: none;
+    position: relative;
+    left: -5%;
+}
+
+.breadcrumb li{
+    display: inline-block;
+    padding: 8px;
+    color: #f9feed;
+}
+
+.breadcrumb li a{
+    color: #accbde;
+    text-decoration: none;
+}
+
+.breadcrumb li a:hover{
+    color: #f9feed;
+    text-decoration: underline;
+}
+
 main{
     background-color: #f9feed;
     background-image: linear-gradient(to bottom, #687354, #f9feed);
@@ -230,6 +259,98 @@ cite{
     margin-top: 10px;
     display: flex;
     justify-self: flex-end;
+}
+
+
+
+/*Om mental sundhed*/
+
+.ms-banner{
+    background-image: url(/img/ms-banner.jpg);
+}
+
+.ms-banner, .vv-banner{
+    background-size: cover;
+    background-position: top center;
+    width: 90%;
+    aspect-ratio: 3/2;
+    border: 3px solid #515b3f;
+    border-radius: 15px;
+    margin: 1.3em 5% 7vh 5%;
+}
+
+.ms-banner a, .vv-banner a{
+    display: flex;
+    justify-self: center;
+    position: relative;
+    top: 80%;
+    text-align: center;
+    background-color: #687354;
+    border: 2px solid #515b3f;
+    border-radius: 4px;
+    color: #f9feed;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: 600;
+    padding: 6px 15px;
+    margin: 0 auto;
+}
+
+.textbox h2{
+    color: #515b3f;
+    padding-bottom: 10px;
+}
+
+.ms-tekst h3, .vv-tekst h3{
+    padding: 5px 0;
+}
+
+#emner section, #strategier section{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    text-align: center;
+    background-color: #687354;
+    border: 4px solid #515b3f;
+    border-radius: 15px;
+    padding: 1.3em 5%;
+    margin: 1.3em 15%;
+    aspect-ratio: 1/1;
+}
+
+#emner img, #strategier img{
+    width: 100%;
+    min-height: 150px;
+    margin: 0.8em 5%;
+}
+
+#emner h4, #strategier h4{
+    color: #f9feed;
+    font-size: 20px;
+}
+
+#emner a, #strategier a{
+    color: #accbde;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+#emner a:hover, #strategier a:hover{
+    color: #0b283b;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.ms-akut, .vv-akut{
+    margin-bottom: 10px;
+}
+
+
+
+/*Velværestrategier*/
+
+.vv-banner{
+    background-image: url(/img/vv-banner.jpg);
 }
 
 
@@ -539,5 +660,7 @@ footer{
         background-color: #FAF5E6;
         width: 100%;
         height: max-content;
+        z-index: 10;
+        border-bottom: 2px solid #515b3f;
     }
 }
