--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,18 @@ cite{
     background-image: url(/img/depression-banner.jpg);
 }
 
+iframe{
+    width: 90%;
+    aspect-ratio: 4/3;
+    margin: 1.3em 5% 8px 5%;
+    border: 5px solid #515b3f;
+}
+
+.credit{
+    text-align: center;
+    margin: 0 auto;
+}
+
 .intext-link{
     color: #687354;
     text-decoration: none;
@@ -697,6 +709,9 @@ footer{
 }
 
 @media screen and (min-width: 769px){
+    
+    /*Header*/
+    
     header{
         justify-content: space-around;
     }
@@ -714,7 +729,149 @@ footer{
     }
 
     h1{
+        font-size: 48px;
+    }
+
+    .textbox h3{
+        font-size: 20px;
+    }
+
+    .breadcrumb{
+        font-size: 18px;
+        padding: 20px 0 0 5%;
+    }
+
+
+    /*Index*/
+
+    .index-title{
         font-size: 96px;
+    }
+
+    .banner{
+        width: 90%;
+        max-height: 70vh;
+        background-size: cover;
+        background-position: center;
+        margin: 2em 5%;
+    }
+
+    .categories{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin: 5%;
+    }
+
+    .categories h2{
+        text-align: center;
+    }
+
+    .categories p{
+        font-size: 16px;
+        font-weight: 400;
+    }
+
+    .categories a{
+        font-size: 18px;
+        font-weight: 600;
+        text-align: center;
+    }
+
+    .left-sec, .right-sec{
+        width: 30%;
+    }
+
+    .left-div, .right-div{
+        align-content: center;
+        gap: 15px;
+        padding: 10px;
+        min-height: fit-content;
+        width: 100%
+    }
+
+    .right-div{
+        flex-direction: column;
+        border-radius: 30px;
+        border-right: 2px solid #f9feed;
+        padding: 5%;
+    }
+
+    .left-div{
+        flex-direction: column-reverse;
+        border-radius: 30px;
+        border-left: 2px solid #f9feed;
+        justify-content: center;
+        padding: 5%
+    }
+
+    .left-content, .right-content{
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .left-img, .right-img{
+        width: 90%;
+        object-fit: contain;
+        justify-self: center;
+        align-self: center;
+        border-radius: 30px;
+    }
+
+    .nyhedsbrev{
+        width: 60%;
+        margin: 5% 20%;
+    }
+
+    .quote{
+        margin-top: 60px;
+        margin-bottom: 60px;
+    }
+
+
+    /*Mental sundhed*/
+
+    #emner, #strategier{
+        max-width: fit-content;
+    }
+
+    #emner img, #strategier img{
+        display: flex;
+        justify-self: center;
+        width: 150px;
+        aspect-ratio: 1/1;
+        margin: 10px 0;
+    }
+
+    .ms-banner, .vv-banner, .angst-banner, .depression-banner, .ensomhed-banner, .stress-banner, .logo-about{
+        width: 90%;
+        max-height: 70vh;
+        background-size: cover;
+        background-position: center;
+        margin: 2em 5%;
+    }
+
+
+    /*Om os*/
+
+    .logo-about{
+        width: 30%;
+        margin-left: 35%;
+        margin-right: 35%;
+    }
+
+    #mission{
+        width: 50%;
+        margin: 60px 25%;
+    }
+
+
+    /*Kontakt*/
+
+    .kontakt{
+        width: 50%;
+        margin-right: 25%;
+        margin-left: 25%;
     }
 }
 
