--- a/css/style.css
+++ b/css/style.css
@@ -99,20 +99,29 @@ h1{
    font-size: 36px;
    color: #f9feed;
    padding: 0.3em 5%;
+   cursor: default;
 }
 
 h2{
     color: #FAF5E6;
     font-size: 24px;
+    cursor: default;
 }
 
 h3{
     color: #687354;
+    cursor: default;
+}
+
+h4{
+    cursor: default;
 }
 
 p{
     color: #2e2e2e;
+    cursor: default;
 }
+
 
 
 
@@ -194,7 +203,7 @@ p{
 }
 
 .left-img, .right-img{
-    width: 35vw;
+    max-width: 140px;
     object-fit: contain;
     align-self: center;
     border-radius: 30px;
@@ -259,6 +268,7 @@ cite{
     margin-top: 10px;
     display: flex;
     justify-self: flex-end;
+    cursor: default;
 }
 
 
@@ -294,6 +304,11 @@ cite{
     font-weight: 600;
     padding: 6px 15px;
     margin: 0 auto;
+}
+
+.banner-btn:hover{
+    background-color: #515b3f;
+    text-decoration: underline;
 }
 
 .textbox h2{
@@ -644,6 +659,11 @@ footer{
     font-size: 18px;
 }
 
+.nyhed-footer input[type=submit]:hover{
+    background-color: #f9feed;
+    text-decoration: underline;
+}
+
 .some-footer{
     display: flex;
     align-content: center;
@@ -784,10 +804,9 @@ footer{
 
     .left-div, .right-div{
         align-content: center;
-        gap: 15px;
         padding: 10px;
-        min-height: fit-content;
-        width: 100%
+        width: 100%;
+        height: 435px;
     }
 
     .right-div{
@@ -802,16 +821,18 @@ footer{
         border-radius: 30px;
         border-left: 2px solid #f9feed;
         justify-content: center;
-        padding: 5%
+        padding: 5%;
     }
 
     .left-content, .right-content{
         flex-direction: column;
+        justify-items: flex-start;
         gap: 8px;
     }
 
     .left-img, .right-img{
-        width: 90%;
+        min-width: 200px;
+        max-width: 90%;
         object-fit: contain;
         justify-self: center;
         align-self: center;
@@ -832,13 +853,24 @@ footer{
     /*Mental sundhed*/
 
     #emner, #strategier{
-        max-width: fit-content;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 80%;
+        margin: 1.3em 10%;
+        padding: 0;
+        justify-content: space-around;
+    }
+
+    #emner section, #strategier section{
+        width: 40%;
+        margin: 2em 0;
     }
 
     #emner img, #strategier img{
         display: flex;
         justify-self: center;
-        width: 150px;
+        max-width: 300px;
         aspect-ratio: 1/1;
         margin: 10px 0;
     }
