--- a/css/style.css
+++ b/css/style.css
@@ -304,7 +304,7 @@ cite{
     border-radius: 4px;
     color: #515b3f;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 600;
     padding: 6px 15px;
     margin: 0 auto;
@@ -361,6 +361,7 @@ cite{
 
 #emner a, #strategier a{
     text-decoration: none;
+    font-size: 24px;
 }
 
 #emner a:hover, #emner h4:hover, #emner p:hover, #strategier a:hover, #strategier h4:hover, #strategier p:hover{
@@ -488,7 +489,7 @@ iframe{
 .tekst-kontakt a{
     color: #accbde;
     font-weight: 600;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .tekst-kontakt a:hover{
@@ -606,6 +607,7 @@ input[type=submit]:hover{
 
 .hotline a{
     color: #515b3f;
+    font-size: 18px;
 }
 
 .hotline a:hover{
@@ -639,13 +641,13 @@ footer{
 
 .email-footer i{
     color: #f9feed;
-    font-size: 18px;
+    font-size: 22px;
     margin-right: 10px;
 }
 
 .email-footer a{
     color: #f9feed;
-    font-size: 16px;
+    font-size: 20px;
 }
 
 .nyhed-footer{
@@ -687,12 +689,12 @@ footer{
 
 .some-footer i{
     color: #f9feed;
-    font-size: 22px;
-    padding: 0 18px;
+    font-size: 24px;
+    padding: 0 25px;
 }
 
 .fa-instagram{
-    font-size: 25px;
+    font-size: 27px;
 }
 
 
@@ -757,7 +759,7 @@ footer{
     }
 
     .main-nav li a{
-        font-size: 1.6vw;
+        font-size: min(24px) max(1.6vw);
     }
 
     .main-nav input{
@@ -773,7 +775,7 @@ footer{
     }
 
     .breadcrumb{
-        font-size: 18px;
+        font-size: 24px;
         padding: 20px 0 0 5%;
     }
 
@@ -809,7 +811,7 @@ footer{
     }
 
     .categories a{
-        font-size: 18px;
+        font-size: 20x;
         font-weight: 600;
         text-align: center;
     }
@@ -822,7 +824,7 @@ footer{
         align-content: center;
         padding: 10px;
         width: 100%;
-        height: 435px;
+        height: 460px;
     }
 
     .right-div{
@@ -901,6 +903,13 @@ footer{
 
     .ms-banner a, .vv-banner a{
         top: 80%;
+        font-size: min(24px);
+    }
+
+    iframe{
+        max-width: 50%;
+        display: flex;
+        justify-self: center;
     }
 
 
@@ -924,6 +933,19 @@ footer{
         width: 50%;
         margin-right: 25%;
         margin-left: 25%;
+    }
+
+
+    /*Footer*/
+
+    .some-footer i{
+        font-size: 32px;
+        padding: 30px;
+    }
+
+    .some-footer .fa-instagram{
+        font-size: 35px;
+        margin-right: 10px;
     }
 }
 
